# speed-dating-connection

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: results.json
docs/: LEAKAGE_AUDIT.md
src/speed_dating_connection/: __init__.py  cli.py  modeling.py  prepare.py
tests/: test_prepare.py
